--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>My Photography - Gallery</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/nav.css">
+        <link rel="stylesheet" href="css/common.css">
     </head>
     <body>
         <header>
@@ -10,14 +11,24 @@
             <p>Welcome to the gallery, where you can take a look at the pictures I take.</p>
         </header>
 
-        <section>
-            <nav>
-                <h1>Navigation</h1>
-                <ul>
-                    <li><a href ="index.html">Home</a></li>
-                    <li><a href ="gear.html">My Gear</a></li>
-                </ul>
-            </nav>
-        </section>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href ="gallery.html" class="active">Gallery</a></li>
+                <li><a href ="gear.html">My Gear</a></li>
+            </ul>
+        </nav>
+
+        <article>
+
+        </article>
+
+        <footer>
+            <h1>About</h1>
+            <p>Copyright (c) 2024 Lucius Landschulze</p>
+            <h2>Find me!</h2>
+            <a href="https://github.com/lucilands">Github</a>
+            <a href="https://bsky.app/profile/lucilands.bsky.social">Bluesky</a>
+        </footer>
     </body>
 </html>
