--- a/gear.html
+++ b/gear.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>My Photography - My Gear</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/nav.css">
+        <link rel="stylesheet" href="css/common.css">
     </head>
 
     <body>
@@ -11,13 +12,24 @@
             <p>In photography the gear you use is important, here is what I use</p>
         </header>
         
-        <section>
-            <nav>
-                <ul>
-                    <li><a href ="index.html">Home</a></li>
-                    <li><a href ="gear.html">My Gear</a></li>
-                </ul>
-            </nav>
-        </section>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href ="gallery.html">Gallery</a></li>
+                <li><a href ="gear.html" class="active">My Gear</a></li>
+            </ul>
+        </nav>
+
+        <article>
+
+        </article>
+
+        <footer>
+            <h1>About</h1>
+            <p>Copyright (c) 2024 Lucius Landschulze</p>
+            <h2>Find me!</h2>
+            <a href="https://github.com/lucilands">Github</a>
+            <a href="https://bsky.app/profile/lucilands.bsky.social">Bluesky</a>
+        </footer>
     </body>
 </html>
