Implement gear.html, now waiting for its CSS

--- a/gear.html
+++ b/gear.html
@@ -21,7 +21,28 @@
         </nav>
 
         <article>
-
+            <table>
+                <tr>
+                    <th>Component</th>
+                    <th>Producer</th>
+                    <th>Name</th>
+                </tr>
+                <tr>
+                    <td>Camera</td>
+                    <td>Canon</td>
+                    <td>650D</td>
+                </tr>
+                <tr>
+                    <td>Lens</td>
+                    <td>Canon</td>
+                    <td>EFS 18-55mm Kitlens</td>
+                </tr>
+                <tr>
+                    <td>Editing Software</td>
+                    <td>Adobe</td>
+                    <td>Lightroom Classic</td>
+                </tr>
+            </table>
         </article>
 
         <footer>
