Implement gallery.html, now waiting for its CSS

--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,17 @@
         </nav>
 
         <article>
-
+            <ul>
+                <li><img src="images/20250209-IMG_0204.jpg" alt="images/20250209-IMG_0204.jpg"></li>
+                <li><img src="images/20250420-IMG_0238-Enhanced-NR.jpg" alt="images/20250420-IMG_0238-Enhanced-NR.jpg"></li>
+                <li><img src="images/20250420-IMG_0254-Enhanced-NR.jpg" alt="images/20250420-IMG_0254-Enhanced-NR.jpg"></li>
+                <li><img src="images/20250420-IMG_0261-Enhanced-NR.jpg" alt="images/20250420-IMG_0261-Enhanced-NR.jpg"></li>
+                <li><img src="images/20250420-IMG_0265.jpg" alt="images/20250420-IMG_0265.jpg"></li>
+                <li><img src="images/IMG_9399-Enhanced-NR.jpg" alt="images/IMG_9399-Enhanced-NR.jpg"></li>
+                <li><img src="images/IMG_9486-Enhanced-NR.jpg" alt="images/IMG_9486-Enhanced-NR.jpg"></li>
+                <li><img src="images/IMG_9533-Enhanced-NR_16x10.jpg" alt="images/IMG_9533-Enhanced-NR_16x10.jpg"></li>
+                <li><img src="images/IMG_9539-Enhanced-NR.jpg" alt="images/IMG_9539-Enhanced-NR.jpg"></li>
+            </ul>
         </article>
 
         <footer>
