--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
         <title>My Photography - Gallery</title>
         <link rel="stylesheet" href="css/nav.css">
         <link rel="stylesheet" href="css/common.css">
+        <link rel="stylesheet" href="css/gallery.css">
     </head>
     <body>
         <header>
@@ -26,19 +27,14 @@
                 <li><img src="images/20250420-IMG_0254-Enhanced-NR.jpg" alt="images/20250420-IMG_0254-Enhanced-NR.jpg"></li>
                 <li><img src="images/20250420-IMG_0261-Enhanced-NR.jpg" alt="images/20250420-IMG_0261-Enhanced-NR.jpg"></li>
                 <li><img src="images/20250420-IMG_0265.jpg" alt="images/20250420-IMG_0265.jpg"></li>
+            
                 <li><img src="images/IMG_9399-Enhanced-NR.jpg" alt="images/IMG_9399-Enhanced-NR.jpg"></li>
                 <li><img src="images/IMG_9486-Enhanced-NR.jpg" alt="images/IMG_9486-Enhanced-NR.jpg"></li>
                 <li><img src="images/IMG_9533-Enhanced-NR_16x10.jpg" alt="images/IMG_9533-Enhanced-NR_16x10.jpg"></li>
                 <li><img src="images/IMG_9539-Enhanced-NR.jpg" alt="images/IMG_9539-Enhanced-NR.jpg"></li>
+                <li><img src="images/20241010-IMG_9757-Enhanced-NR.jpg" alt="images/20241010-IMG_9757-Enhanced-NR.jpg"></li>
             </ul>
         </article>
 
-        <footer>
-            <h1>About</h1>
-            <p>Copyright (c) 2024 Lucius Landschulze</p>
-            <h2>Find me!</h2>
-            <a href="https://github.com/lucilands">Github</a>
-            <a href="https://bsky.app/profile/lucilands.bsky.social">Bluesky</a>
-        </footer>
     </body>
 </html>
