--- a/gear.html
+++ b/gear.html
@@ -4,6 +4,7 @@
         <title>My Photography - My Gear</title>
         <link rel="stylesheet" href="css/nav.css">
         <link rel="stylesheet" href="css/common.css">
+        <link rel="stylesheet" href="css/gear.css">
     </head>
 
     <body>
